# GwToolbox_HelperPlugins

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AllowAllDialogs.cpp  AllowAllDialogs.h  CMakeLists.txt  Changelog.md  README.md  ToolboxPlugin.h  index.html  mkdocs.yml  requirements.txt
.github/workflows/: documentation.yml  pre-commit.yml
General/AutoFollow/: index.html
General/ChatCommands/: index.html
General/DialogWindow/: index.html
General/HeroWindow/: index.html
General/Longfinger/: index.html
Uw/Db/: index.html
Uw/Emo/: index.html
Uw/Mesmer/: index.html
Uw/Ranger/: index.html
Uw/Timer/: index.html
cmake/: ConfigSafeGuards.cmake  Sanitizer.cmake  Tools.cmake  Warnings.cmake  gwca.cmake  gwtoolboxdll_plugins.cmake  gwtoolboxpp.cmake  imgui.cmake  implot.cmake  minhook.cmake
docs/: index.md
docs/General/: AutoFollow.md  ChatCommands.md  DialogWindow.md  HeroSkills.md  HeroWindow.md  Longfinger.md
docs/Uw/: Db.md  Emo.md  Mesmer.md  Ranger.md  Timer.md
search/: search_index.json
src/: AllowAllDialogs.cpp  AllowAllDialogs.h  CtoSMgr_Copy.cpp  Plugin.cpp  Plugin.h  SmartHeroSkills.cpp  SmartHeroSkills.h  stdafx.h
src/AllowAllDialogs/: AllowAllDialogs.cpp  AllowAllDialogs.h
src/AutoFollow/: AutoFollow.cpp  AutoFollow.h
src/Base/: PluginUtils.ixx  ToolboxPlugin.cpp  ToolboxPlugin.h  ToolboxUIPlugin.cpp  ToolboxUIPlugin.h  dllmain.cpp  stl.h
src/DialogWindow/: DialogWindow.cpp  DialogWindow.h
src/HelperBox/: CMakeLists.txt  HelperBox.cpp  HelperBox.h  main.cpp
src/HelperBox/Actions/: ActionTypes.h  ActionsBase.cpp  ActionsBase.h  ActionsMove.cpp  ActionsMove.h  ActionsUw.h  CMakeLists.txt
src/HelperBox/Data/: CMakeLists.txt  DataPlayer.cpp  DataPlayer.h  DataSkill.cpp  DataSkill.h  DataSkillbar.h
src/HelperBox/Helper/: CMakeLists.txt  Helper.cpp  Helper.h  HelperAgents.cpp  HelperAgents.h  HelperCallbacks.cpp  HelperCallbacks.h  HelperItems.cpp  HelperItems.h  HelperPackets.h  HelperUw.cpp  HelperUw.h  HelperUwPos.cpp  HelperUwPos.h
src/HelperBox/Main/: CMakeLists.txt
src/HelperBox/Main/Base/: HelperBox.cpp  HelperBox.h  HelperBoxModule.cpp  HelperBoxModule.h  HelperBoxSettings.cpp  HelperBoxSettings.h  HelperBoxTheme.cpp  HelperBoxTheme.h  HelperBoxUIElement.cpp  HelperBoxUIElement.h  HelperBoxWindow.cpp  HelperBoxWindow.h  MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h
src/HelperBox/Main/Features/General/: AutoFollowWindow.cpp  AutoFollowWindow.h  ChatCommands.cpp  ChatCommands.h  HeroWindow.cpp  HeroWindow.h  Hotkeys.cpp  Hotkeys.h  HotkeysWindow.cpp  HotkeysWindow.h  MimicWindow.cpp  MimicWindow.h
src/HelperBox/Main/Features/Uw/: UwDhuumBitch.cpp  UwDhuumBitch.h  UwDhuumStats.cpp  UwDhuumStats.h  UwEmo.cpp  UwEmo.h  UwMesmer.cpp  UwMesmer.h  UwMetadata.cpp  UwMetadata.h  UwRanger.cpp  UwRanger.h
src/HelperBox/Utils/: CMakeLists.txt  Keys.h  Logger.h  Utils.cpp  Utils.h  UtilsGui.cpp  UtilsGui.h  UtilsMath.cpp
src/HeroSkills/: HeroSkills.cpp  HeroSkills.h
src/HeroWIndow/: HeroWIndow.cpp  HeroWindow.h
src/LongFinger/: LongFinger.cpp  LongFinger.h
src/RawDialogs/: RawDialogs.cpp  RawDialogs.h
src/SmartBip/: SmartBip.cpp  SmartBip.h
src/SmartCommands/: SmartCommands.cpp  SmartCommands.h
src/SmartHexAndCondRemove/: SmartHexAndCondRemove.cpp  SmartHexAndCondRemove.h
src/SmartHonor/: SmartHonor.cpp  SmartHonor.h
src/SmartMeleeBuffs/: SmartMeleeBuffs.cpp  SmartMeleeBuffs.h
src/SmartST/: SmartST.cpp  SmartST.h
src/SmartSkillRupts/: SmartSkillRupts.cpp  SmartSkillRupts.h
src/SmartSoS/: SmartSoS.cpp  SmartSoS.h
src/SmartSplinter/: SmartSplinter.cpp  SmartSplinter.h
src/SmartVigSpirit/: SmartVigSpirit.cpp  SmartVigSpirit.h
src/TargetEverything/: TargetEverything.cpp  TargetEverything.h
src/Utils/: ActionTypes.cpp  ActionsBase.cpp  ActionsBase.h  ActionsMove.cpp  ActionsMove.h  ActionsUw.h  DataHero.cpp  DataHero.h  DataLivings.cpp  DataLivings.h  DataPlayer.cpp  DataPlayer.h  DataSkill.cpp  DataSkill.h  DataSkillbar.h  DataSkillbarUw.h  Helper.cpp  Helper.h  HelperAgents.cpp  HelperAgents.h  HelperCallbacks.cpp  HelperCallbacks.h  HelperHero.cpp  HelperHero.h  HelperItems.cpp  HelperItems.h  HelperMaps.cpp  HelperMaps.h  HelperQuests.cpp  HelperQuests.h  HelperSkill.cpp  HelperSkill.h  HelperUw.cpp  HelperUw.h  HelperUwPos.cpp  HelperUwPos.h  HeroSmartSkills.cpp  HeroSmartSkills.h  Logger.cpp  Utils.h  (+6 more)
src/UwDhuumBitch/: UwDhuumBitch.cpp  UwDhuumBitch.h
src/UwDhuumStats/: UwDhuumStats.cpp  UwDhuumStats.h
src/UwEmo/: UwEmo.cpp  UwEmo.h
src/UwHelper/: UwDhuumBitch.cpp  UwDhuumStats.cpp  UwDhuumStats.h  UwEmo.cpp  UwEmo.h  UwMesmer.cpp  UwMetadata.cpp  UwMetadata.h  UwRanger.cpp
src/UwMesmer/: UwMesmer.cpp  UwMesmer.h
src/UwRanger/: UwRanger.cpp  UwRanger.h
src/_Lib/Actions/: ActionsMove.cpp  ActionsMove.h  ActionsUw.h
src/_Lib/Data/: DataLivings.cpp  DataSkillbar.h  UwMetadata.h
src/_Lib/Helper/: Helper.h  HelperAgents.h  HelperDialogs.cpp  HelperHero.cpp  HelperHero.h  HelperItems.cpp  HelperItems.h  HelperMaps.h  HelperPlayer.cpp  HelperPlayer.h  HelperSkill.cpp  HelperSkill.h  HelperUw.cpp  HeroSmartSkills.cpp  HeroSmartSkills.h
src/_Lib/Utils/: Logger.cpp  Utils.cpp  UtilsGui.cpp  UtilsGui.h  UtilsMath.cpp  UtilsMath.h
